--- a/ssh2/Dockerfile
+++ b/ssh2/Dockerfile
@@ -4,24 +4,56 @@ LABEL description="Web Server to CTF content"
 LABEL maintainer="The`{crazy"
 RUN apt update 
 RUN apt install –y openssh-server sshpass
-RUN mkdir /var/run/sshd
-RUN apt clean
-ARG CTF_USER=ctfuser
-RUN useradd -m $CTF_USER -s /bin/bash
-RUN mkdir /home/$CTF_USER/.ssh
-RUN chmod 700 /home/$CTF_USER/.ssh
-COPY ../ctf-keys/ctf_key.pub /home/$CTF_USER/.ssh/authorized_keys
-RUN chmod 600 /home/$CTF_USER/.ssh/authorized_keys
-RUN chown -R $CTF_USER:$CTF_USER /home/$CTF_USER/.ssh
+ARG CTF_USER_ARG
+ENV CTF_USER=${CTF_USER_ARG}
+RUN useradd -m ${CTF_USER} -s /bin/bash
+
+# Create the .ssh directory and set correct permissions for the CTF user
+RUN mkdir /home/${CTF_USER}/.ssh
+RUN chmod 700 /home/${CTF_USER}/.ssh
+
+# Copy the public SSH key from the host's ctf-keys directory
+COPY ../ctf-keys/ctf_key.pub /home/${CTF_USER}/.ssh/authorized_keys
+RUN chmod 600 /home/${CTF_USER}/.ssh/authorized_keys
+RUN chown -R ${CTF_USER}:${CTF_USER} /home/${CTF_USER}/.ssh
+
+# Configure SSH
 RUN sed -i 's/#PasswordAuthentication yes/PasswordAuthentication no/' /etc/ssh/sshd_config
 RUN sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
-RUN echo "ClientAliveInterval 60" >> /etc/ssh/sshd_config   # Invia un messaggio keep-alive ogni 60 secondi
-RUN echo "ClientAliveCountMax 0" >> /etc/ssh/sshd_config    # Termina la sessione dopo 0 risposte (subito dopo il primo ClientAliveInterval)
-RUN echo "ctfuser ALL=(root) NOPASSWD: /usr/bin/mount, /usr/sbin/poweroff" > /etc/sudoers.d/ctfuser_privs
-RUN echo "ctfuser ALL=(root) NOPASSWD: /usr/bin/ls, /usr/bin/mount, /usr/sbin/poweroff" > /etc/sudoers.d/ctfuser_privs
-RUN echo "FLAG_TWO{Bind_Mount_to_Root_on_RO}" > /root/flag2.txt
+
+# Set SSH session timeout to 1 minute (60 seconds of inactivity)
+RUN echo "ClientAliveInterval 60" >> /etc/ssh/sshd_config
+RUN echo "ClientAliveCountMax 0" >> /etc/ssh/sshd_config
+
+# ******************************************************************
+# Configure sudoers for privilege escalation (ls, mount, poweroff)
+# ******************************************************************
+
+# ctfuser will have NOPASSWD for /usr/bin/ls, /usr/bin/mount, and /usr/sbin/poweroff
+RUN echo "${CTF_USER} ALL=(root) NOPASSWD: /usr/bin/ls, /usr/bin/mount, /usr/sbin/poweroff" > /etc/sudoers.d/ctfuser_privs
+RUN chmod 440 /etc/sudoers.d/ctfuser_privs # Correct permissions for sudoers.d
+
+# ******************************************************************
+# Disable history writing for root and ctfuser
+# ******************************************************************
+RUN echo "unset HISTFILE" >> /root/.bashrc
+RUN echo "unset HISTSIZE" >> /root/.bashrc
+RUN echo "unset HISTFILE" >> /home/${CTF_USER}/.bashrc
+RUN echo "unset HISTSIZE" >> /home/${CTF_USER}/.bashrc
+RUN chown ${CTF_USER}:${CTF_USER} /home/${CTF_USER}/.bashrc
+
+# ******************************************************************
+# Final Flag
+# ******************************************************************
+
+# Add the final flag (accessible only as root) (read from environment variable)
+ARG FLAG_TWO_CONTENT_ARG
+ENV FLAG_TWO_CONTENT=${FLAG_TWO_CONTENT_ARG}
+RUN echo "${FLAG_TWO_CONTENT}" > /root/flag2.txt
 RUN chmod 400 /root/flag2.txt
 RUN chown root:root /root/flag2.txt
-RUN unset HISTFILE && rm -f /root/.bash_history /home/$CTF_USER/.bash_history
+
 EXPOSE 22
+
+# Start SSH in foreground
 CMD ["/usr/sbin/sshd", "-D"]
