--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -7,5 +7,5 @@ RUN apt install –y apache2
 RUN apt install –y apache2-utils 
 RUN apt clean 
 EXPOSE 80
-COPY web-page/* /var/www/html/
+COPY web/web-page/ /var/www/html/
 CMD [“apache2ctl”, “-D”, “FOREGROUND”]
