--- a/ssh2/Dockerfile
+++ b/ssh2/Dockerfile
@@ -5,10 +5,11 @@ FROM debian:stable-slim
 RUN apt-get update && apt-get install -y --no-install-recommends openssh-server sshpass sudo coreutils
 
 # Create the CTF user
-ARG CTF_USER_ARG # Riceve il valore da docker-compose build --build-arg
-ENV CTF_USER=${CTF_USER_ARG} 
-
-RUN useradd -m ${CTF_USER} -s /bin/bash # Usa la variabile ENV
+ARG CTF_USER_ARG # Receives the value from docker-compose build --build-arg
+# Directly use CTF_USER_ARG for useradd to ensure it's resolved
+RUN useradd -m ${CTF_USER_ARG} -s /bin/bash
+# Set ENV CTF_USER for later commands that might use it (e.g., echo to .bashrc)
+ENV CTF_USER=${CTF_USER_ARG}
 
 # Create the .ssh directory and set correct permissions for the CTF user
 RUN mkdir /home/${CTF_USER}/.ssh
