--- a/web/conf/000-default.conf
+++ b/web/conf/000-default.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
     ServerAdmin webmaster@localhost
-    DocumentRoot /var/www/html # The directory where Apache will look for site files
+    DocumentRoot /var/www/html 
 
     # This is important for internal DNS resolution via Docker Compose
     ServerName pincopallo.evilcorp.org
@@ -9,8 +9,8 @@
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
     <Directory /var/www/html/>
-        Options Indexes FollowSymLinks Includes # Abilita Includes per SSI
-        AllowOverride None # No .htaccess directives are allowed
+        Options Indexes FollowSymLinks Includes 
+        AllowOverride None 
         Require all granted
     </Directory>
 
