--- a/web/conf/apache.conf
+++ b/web/conf/apache.conf
@@ -12,7 +12,7 @@ KeepAliveTimeout 5
 User ${APACHE_RUN_USER}
 Group ${APACHE_RUN_GROUP}
 HostnameLookups Off
-ErrorLog /var/log/apache2/error.log
+#ErrorLog /var/log/apache2/error.log
 LogLevel warn
 
 # Include module configuration:
@@ -30,9 +30,9 @@ TypesConfig /etc/mime.types
 DefaultType application/octet-stream
 
 # Configure the access log
-LogFormat "%h %l %u %t \"%r\" %>s %b" common
-LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
-CustomLog /var/log/apache2/access.log combined
+#LogFormat "%h %l %u %t \"%r\" %>s %b" common
+#LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
+#CustomLog /var/log/apache2/access.log combined
 
 <Directory />
     Options FollowSymLinks
