--- a/web/conf/000-default.conf
+++ b/web/conf/000-default.conf
@@ -5,8 +5,8 @@
     # This is important for internal DNS resolution via Docker Compose
     ServerName pincopallo.evilcorp.org
 
-    ErrorLog ${APACHE_LOG_DIR}/error.log
-    CustomLog ${APACHE_LOG_DIR}/access.log combined
+   # ErrorLog /var/log/apache2/error.log
+   # CustomLog /var/log/apache2/access.log combined
 
     <Directory /var/www/html/>
         Options Indexes FollowSymLinks Includes 
