--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -15,7 +15,7 @@ RUN rm /etc/apache2/sites-available/000-default.conf
 RUN rm /etc/apache2/sites-enabled/000-default.conf
 
 # Copy our custom configuration files from the new 'conf/' directory
-COPY web/conf/apache2.conf /etc/apache2/apache2.conf
+COPY web/conf/apache.conf /etc/apache2/apache2.conf
 COPY web/conf/000-default.conf /etc/apache2/sites-available/000-default.conf
 
 # Enable our virtual host
@@ -23,7 +23,7 @@ RUN a2ensite 000-default.conf
 
 # Copy our website files to Apache's default root directory
 # NOTA: Il file ora è index.shtml per SSI
-COPY web-page/index.shtml /var/www/html/index.shtml
+COPY web/web-page/index.shtml /var/www/html/index.shtml
 
 # Expose port 80, the standard HTTP port
 EXPOSE 80
