--- a/web/conf/apache.conf
+++ b/web/conf/apache.conf
@@ -34,6 +34,11 @@ DefaultType application/octet-stream
 #LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
 #CustomLog /var/log/apache2/access.log combined
 
+ErrorLog /dev/stdout
+CustomLog "|/usr/bin/logger -p local7 -t apache2 -i" combined
+
+
+
 <Directory />
     Options FollowSymLinks
     AllowOverride None
