--- a/web/conf/apache.conf
+++ b/web/conf/apache.conf
@@ -27,7 +27,7 @@ IncludeOptional sites-enabled/*.conf
 
 # Default MIME type
 TypesConfig /etc/mime.types
-DefaultType application/octet-stream
+#DefaultType application/octet-stream
 
 # Configure the access log
 #LogFormat "%h %l %u %t \"%r\" %>s %b" common
