--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,7 +38,8 @@ services:
         SSH_TARGET_2_PRIVATE_IP_ARG: ${SSH_TARGET_2_PRIVATE_IP}
     ports:
       - "2222:22"            # SSH accessibile dalla rete pubblica dell'host
-      - "3000:3000"
+      - "61616:61616"        # <--- NUOVO: Porta OpenWire di ActiveMQ
+      - "8161:8161"          # <--- NUOVO: Porta della console web di ActiveMQ
     networks:
       ctf-public:
         ipv4_address: ${SSH_TARGET_1_PUBLIC_IP} # Legge l'IP dal .env
