--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,7 +38,7 @@ services:
         SSH_TARGET_2_PRIVATE_IP_ARG: ${SSH_TARGET_2_PRIVATE_IP}
     ports:
       - "2222:22"            # SSH accessibile dalla rete pubblica dell'host
-      - "6080:80"              # <--- NUOVO: Porta HTTP di FuelCMS
+      - "8080:8080"          # Porta HTTP di Liferay/Tomcat
     networks:
       ctf-public:
         ipv4_address: ${SSH_TARGET_1_PUBLIC_IP} # Legge l'IP dal .env
